<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_insert"
        android:title="@string/insert_register"
        android:orderInCategory="94"
        app:showAsAction="always"
        android:icon="@drawable/test"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/test"
        android:title="@string/search_register"
        android:orderInCategory="95"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/test"
        android:title="Galería"
        android:orderInCategory="96"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
